--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 body{
 
-background-color: aquamarine;
-
-}
-
-.tit{
-
-    position: relative;
-    background-color: blueviolet;
-
-}
+    background-color: aquamarine;
+    
+    }
+    
+    #tit{
+        text-align: center;
+        align-content:center;
+        background-color: beige;
+        color: lightseagreen;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+    }
