--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,17 @@
-body{
+body {
 
-background-color: aquamarine;
+    background-image: url(img/wallaper.jpg);
 
-    }
+}
 
-#tit{
-        text-align: center;
-        align-content:center;
-        background-color: beige;
-        color: lightseagreen;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        border-radius:28px;
-        margin-left: 15px;
-        margin-right: 15px;
-        padding:25px;
-    }
+#tit {
+    text-align: center;
+    align-content: center;
+    background-color: beige;
+    color: lightseagreen;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    border-radius: 28px;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 25px;
+}
