--- a/DocumentTracking/cliente/src/css/App.css
+++ b/DocumentTracking/cliente/src/css/App.css
@@ -1,10 +1,15 @@
 .App {
   text-align: center;
+  background-image: url("https://img.freepik.com/vector-gratis/fondo-onda-blanca-suave_52683-55288.jpg?w=2000");
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.Titulos{
+  margin-top:70px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
