--- a/DocumentTracking/cliente/src/css/App.css
+++ b/DocumentTracking/cliente/src/css/App.css
@@ -57,7 +57,6 @@
   margin-right: 45px;
   margin-bottom: 40px;
   text-shadow:0px -3px 7px #3d768a;
-  
 }
 
 .Fondo{
@@ -125,21 +124,71 @@
 }
 
 .tabs {
-	background-color:#ffffff;
+	background-color:#2e2751;
 	border-radius:2px;
-	border:1px solid #29668f;
-  border-radius: 5px;
+  	border-radius: 5px;
 	display:inline-block;
 	cursor:pointer;
-	color:#171617;
 	font-family:Verdana;
-	font-size:14px;
+	font-size:12px;
 	font-weight:bold;
+	color:#fffdfd;
+	padding-left: 5px;
+	padding-right: 5px;
+
 }
 
-.tabs:active {
+.tabs:hover{
+	background-color:#383256;
+	color: white;
+}
+
+
+
+.btn-seleccion {
+	background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+	background-color:#f9f9f9;
+	border-radius:7px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Verdana;
+	font-size:15px;
+	font-weight:bold;
+	padding:5px 80px;
+	text-decoration:none;
+	margin-bottom: 20px;
+}
+.btn-seleccion:hover {
+	background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+	background-color:#e9e9e9;
+}
+.btn-seleccion:active {
 	position:relative;
 	top:1px;
+}
+
+.acomodar{
+	margin-top: 30px;
+}
+
+
+/*Navbar sticky*/
+
+
+  
+.acomodar-resultados{
+	margin-top: 300px;
+}
+  
+.sticky{
+	position: fixed;
+	top: 0;
+	width: 95%;
+	background-color: #dcdae9;
+	margin-left: 2%;
+	border-radius: 15px;
 }
 
 
